--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
-<html lang='en' ng-app="owmApp">
+<html lang='en' ng-app="cacApp">
 <head>
 <!-- build:css ./_assets/combined.css -->
 <link rel="stylesheet" type="text/css" href="./main.css" />
 <!-- endbuild -->
 <meta charset='UTF-8' />
-<title>Open Weather Map Application</title>
+<title>Countries and Capitals app</title>
 </head>
 
 <body class="owm-body">
-  <div class="navbar owm-navigation">
-    <ul>
-      <li><a href="#!/">US Cities</a></li>
-      <li><a href="#!/near-me">Near Me</a></li>
-    </ul>
-  </div>
-
-  <div class="owm-view fade" ng-view></div>
+  <h1>Countries and Capitals</h1>
+  <div class="" ng-view></div>
 
 <!-- build:js ./_assets/combined.js -->
-<script src="./bower_components/jquery/dist/jquery.js"></script>
-<script src="./bower_components/underscore/underscore.js"></script>
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-route/angular-route.js"></script>
 <script src="./bower_components/angular-animate/angular-animate.js"></script>
-<script src="./bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-<script src="./owm-library.js"></script>
-<script src="./owm-app-views.js"></script>
-<script src="./home/home.js"></script>
-<script src="./home/near-me.js"></script>
-<script src="./cities/city.js"></script>
-<script src="./owm-app.js"></script>
+<script src="./app.js"></script>
 <!-- endbuild -->
 </body>
 </html>
