--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,10 @@
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-route/angular-route.js"></script>
 <script src="./bower_components/angular-animate/angular-animate.js"></script>
+<script src="./app-views.js"></script>
+<script src="./countries-list/list.js"></script>
+<script src="./home/home.js"></script>
+<script src="./cac-library.js"></script>
 <script src="./app.js"></script>
 <!-- endbuild -->
 </body>
