--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 <script src="./app-views.js"></script>
 <script src="./countries-list/list.js"></script>
 <script src="./home/home.js"></script>
+<script src="./city/city.js"></script>
 <script src="./cac-library.js"></script>
 <script src="./app.js"></script>
 <!-- endbuild -->
